--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Estudio Fotografico 2020</title>
 </head>
-<body>
+<body bgcolor="red">
     <h1>Bienvenido a la web del Estudio Fotografico 2020</h1>
     <p>Esta es la pagina donde podras ver nuestros trabajos</p>
 </body>
